--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.1.0",
     "gatsby-plugin-typescript": "^2.1.0",
+    "gatsby-plugin-typography": "^2.3.0",
     "gatsby-remark-autolink-headers": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.0",
     "gatsby-remark-images": "^3.1.2",
@@ -30,8 +31,11 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "styled-components": "^4.3.2",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "typography": "^0.16.19",
+    "typography-theme-moraga": "^0.16.19"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.8",
