--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
     "gatsby-plugin-styled-components": "^3.1.0",
@@ -31,11 +32,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
     "styled-components": "^4.3.2",
-    "typescript": "^3.5.2",
-    "typography": "^0.16.19",
-    "typography-theme-moraga": "^0.16.19"
+    "typescript": "^3.5.2"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.8",
