--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.18.2"
   },
   "scripts": {
     "build": "gatsby build",
-    "deploy": "gatsby build --prefix-paths",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "dev": "gatsby develop"
   },
   "keywords": [
@@ -68,5 +69,8 @@
     "javascript"
   ],
   "author": "Nathan Stromberg",
-  "license": "ISC"
+  "license": "ISC",
+  "resolutions": {
+    "terser": "4.0.0"
+  }
 }
