--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Personal Portfolio for Programming",
   "dependencies": {
     "@babel/core": "^7.4.5",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/styles": "^4.1.2",
     "babel-plugin-styled-components": "^1.10.4",
     "classnames": "^2.2.6",
     "gatsby": "^2.11.5",
@@ -11,6 +13,7 @@
     "gatsby-plugin-canonical-urls": "^2.1.0",
     "gatsby-plugin-google-analytics": "^2.1.1",
     "gatsby-plugin-manifest": "^2.2.0",
+    "gatsby-plugin-material-ui": "^2.1.4",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.2.1",
